# stitch-schemata

./: .coveragerc  .gitignore  LICENSE.md  README.md  build.xml  pyproject.toml
stitch_schemata/: __init__.py
stitch_schemata/application/: StitchSchemataApplication.py
stitch_schemata/combine/: Combine.py  Config.py
stitch_schemata/command/: CombineCommand.py  OcrCommand.py  StitchSchemataCommand.py
stitch_schemata/helper/: Config.py
stitch_schemata/io/: StitchSchemataIO.py
stitch_schemata/ocr/: Config.py  GlyphlessFont.py  Ocr.py  OcrPixels2Points.py  OcrText.py
stitch_schemata/stitch/: Config.py  Image.py  OrientationDetector.py  ScanMetadata.py  Side.py  Stitch.py  Tile.py  TileExtractor.py  TileFinder.py  __init__.py
test/: StitchTest.py
